# zipcrawl

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: archive.rs  display.rs  errors.rs  lib.rs  main.rs
src/commands/: cat.rs  diff.rs  execute.rs  find.rs  grep.rs  list.rs  mod.rs  tree.rs  tui.rs
src/tui/: app.rs  mod.rs  ui.rs
