[package]
name = "zipcrawl"
version = "0.1.4"
edition = "2024"
authors = ["SirCesarium"]
description = "A high-performance ZIP explorer and content inspector for the terminal."
license = "MIT"
repository = "https://github.com/SirCesarium/zipcrawl"
readme = "README.md"
keywords = ["zip", "cli", "explorer", "grep", "tree"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
bytesize = "2.3.1"
colored = "3.1.1"
ignore = "0.4.25"
miette = { version = "7.6.0", features = ["fancy"] }
regex = "1.12.3"
thiserror = "2.0.18"
zip = "8.2.0"
clap = { version = "4.6.0", features = ["derive"], optional = true }
ratatui = { version = "0.30.0", optional = true }
crossterm = { version = "0.29.0", optional = true }

[features]
default = ["nerdfonts", "cli"]
nerdfonts = []
cli = ["dep:clap", "dep:ratatui", "dep:crossterm"]
